--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
 
     <header role="banner">
         <h1><b>THYNKTECH INDIA PVT. LTD.</b></h1>
-        <p><em>Transforming Ideas Into Digital Excellence</em></p>
+        <p><i>Transforming Ideas Into Digital Excellence</i></p>
 
         <nav class="navbar" role="navigation">
             <ul>
@@ -125,11 +125,12 @@
         </address>
     </section>
 
-    <!-- Footer -->
+  
     <footer role="contentinfo">
         <p>© 2026 ThynkTech India Pvt. Ltd. | All Rights Reserved</p>
     </footer>
 
 </main>
 </body>
+<script src="app.js"> </script>
 </html>
